# cppcoro-http

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: CPPCoroUtils.cmake  Findmbedtls.cmake  gold.cmake
examples/: CMakeLists.txt  echo.cpp  echo_client.cpp  echo_client.py  hello_world.cpp  readme.cpp
examples/simple_co_http_server/: CMakeLists.txt  cert.hpp  main.cpp
include/cppcoro/: concepts.hpp  kw_args.hpp
include/cppcoro/crypto/: base64.hpp  sha1.hpp
include/cppcoro/detail/: always_false.hpp  c_ptr.hpp  function_traits.hpp  is_specialization.hpp  tuple_utils.hpp
include/cppcoro/details/: function_traits.hpp  router.hpp  type_index.hpp
include/cppcoro/fmt/: span.hpp  stringable.hpp  type_logger.hpp
include/cppcoro/http/: chunk_provider.hpp  client.hpp  concepts.hpp  config.hpp  connection.hpp  http.hpp  http_chunk_provider.hpp  http_client.hpp  http_connection.hpp  http_message.hpp  http_request.hpp  http_response.hpp  http_server.hpp  message.hpp  request.hpp  request_processor.hpp  request_server.hpp  response.hpp  route_controller.hpp  route_parameter.hpp  router.hpp  server.hpp  session.hpp  url.hpp
include/cppcoro/http/details/: router.hpp  static_parser_handler.hpp
include/cppcoro/net/: any_socket.hpp  concepts.hpp  connect.hpp  connection.hpp  make_socket.hpp  message.hpp  serve.hpp  server.hpp  ssl_socket.hpp  tcp.hpp  uri.hpp
include/cppcoro/net/ssl/: certificate.hpp  concepts.hpp  context.hpp  handshake_operation.hpp  key.hpp  socket.hpp
include/cppcoro/router/: route_parameter.hpp  router.hpp
include/cppcoro/ssl/: certificate.hpp  concepts.hpp  context.hpp  error.hpp  key.hpp  socket.hpp
include/cppcoro/tcp/: tcp.hpp
include/cppcoro/ws/: client.hpp  connection.hpp  header.hpp  server.hpp
src/: http.cpp  uri.cpp
tests/: CMakeLists.txt  test_chunked.cpp  test_requests.cpp  test_route_controller.cpp  test_router.cpp  test_server.cpp  test_uri.cpp
tests/http/: test_chunked.cpp  test_requests.cpp  test_router.cpp  test_server.cpp  test_uri.cpp
tests/net/: test_any_socket.cpp  test_server.cpp
tests/router/: test_router.cpp
tests/ssl/: CMakeLists.txt  cert.hpp  test_ssl_socket.cpp
tests/web_socket/: CMakeLists.txt  client.py  test_server.cpp  test_ws_server.cpp
